# SimPM

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  CHANGES.md  DASHBOARD_DOCS_SUMMARY.md  DASHBOARD_DOCUMENTATION_OVERVIEW.md  DASHBOARD_SCREENSHOTS_GUIDE.txt  DELIVERY_SUMMARY.txt  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_VERIFICATION_REPORT.html  EARTHMOVING_EXAMPLES_RESULTS.txt  EARTHMOVING_EXAMPLES_SUMMARY.txt  FILE_GUIDE.txt  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE.txt  LICENSE  QUICK_REFERENCE_EXAMPLES.txt  README.md  README_DASHBOARD_DOCUMENTATION.txt  SCREENSHOT_IMPLEMENTATION_CHECKLIST.md  TASK_COMPLETION_SUMMARY.txt  build_docs.bat  generate_diagrams.py  mc_output.txt  pyproject.toml  render_diagrams.py  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  temp_repair_output.txt  temp_repair_preemptive_output.txt  temp_results1.txt  temp_results2.txt
docs/: des.md  requirements.txt
docs/source/: api.rst  conf.py  getting-started.rst  index.rst  tutorials-master.rst
docs/source/_visualizations/: simpm_architecture.dot  simpm_classes.dot  simpm_workflow.dot
docs/source/api_reference/: architecture.rst  index.rst  simpm.dashboard.rst  simpm.des.rst  simpm.dist.rst  simpm.log_cfg.rst  simpm.rst
docs/source/concepts/: des-background.rst  project-modeling.rst
docs/source/tutorials/: dashboard-guide.rst  equipment-maintenance.rst  hello-simpm.rst  index.rst  preemptive-resource.rst  priority-resource.rst  resource-bottlenecks.rst  schedule-risk.rst  uncertainty.rst
example/: Earth Moving 2-plus breakdown (1).py  cpm.py  distributions.ipynb  earth moving with breakdown .py  earthmoving_monte_carlo.py  earthmoving_probabilistic.py  earthmoving_probabilistic.py.bak  earthmoving_with_truck_sizes.py  modeling or.py  pallet II 2-1.py  pallet factory.py  pr_cpm (1).py  preemptive_resource.py  priority resource.py  probabilistic cpm.py  repair earthmoving.py  repair earthmoving.txt  repair earthmoving_dashboard.txt  repair earthmoving_preemptive.py  simple crew  simple crew.py  simple earthmoving.py  test_cpm.py  test_modeling_or.py  test_preemptive_resource.py  test_priority_resource.py  test_repair_earthmoving.py  test_simple_earthmoving.py
poster/: index.html
poster/assets/: app.js  styles.css
src/: __init__.py
src/Examples/: example.py
src/Mving_Entity/: show_environment.py
src/abs_tests/: show_environment.py
src/des_tests/: Earth Moving 2-plus breakdown (1).py  example.py  pallet II 2-1.py  pr_cpm (1).py  test_cpm.py  test_modeling_or.py  test_preemptive_resource.py  test_priority_resource.py  test_repair_earthmoving.py  test_simple_earthmoving.py
src/mcs_tests/: test1.py  test_tobedeleted.py
src/pmpy/: MovingEntity.py  __init__.py  _utils.py  abs.py  conf.py  consim.py  core.py  des.py  dist.py  example.py  log_cfg.py  mcs.py  test.py  test2.py  test3.py  test4.py  test5.py  test_cpm.py  test_modeling_or.py  test_repair_earthmoving.py  test_simple_earthmoving.py
src/pmpy/simulation/: __init__.py  discrete_event.py  distributions.py  monte_carlo.py  test.py  test2.py
src/simpm/: MovingEntity.py  __init__.py  _utils.py  dashboard.py  dashboard_data.py  des.py  dist.py  log_cfg.py  recorder.py  runner.py
src/simpm/assets/: simpm.css
src/simpm/docs/: index.html  search.js
src/simpm/docs/simpm/: dist.html
src/tests/: test_modeling_or.py  test_preemptive_resource.py  test_priority_resource.py  test_repair_earthmoving.py  test_simple_earthmoving.py
tests/: conftest.py  test_dashboard.py  test_des.py  test_dist.py  test_log_cfg.py  test_preemptive_resource.py  test_recorder.py  test_resource_guards.py  test_runner.py
tools/: build_docs.py  make_simpm_logo.py  to do list
