# Followed from simpy setup.cfg https://gitlab.com/team-simpy/simpy/-/blob/master/setup.cfg

[metadata]
name = simpm
author = Naimeh Sadeghi, Pedram Elmi
author_email = "naima.sadeghi@gmail.com", "pedram.elmi@gmail.com"
description = Simulation Tool in Project Management.
long_description = file: README.md, AUTHORS.md
long_description_content_type = text/markdown
url = https://github.com/Project-SimPM
keywords =
    python
    project management
    construction
    simulation
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering

[options]
include_package_data = True
zip_safe = False
setup_requires =
install_requires =
    simpy >= 4
    pandas >= 1
    numpy >= 1
    scipy >= 1
    matplotlib >= 3
    colorlog >= 6

python_requires = >= 3.6

package_dir =
    = src
packages = find:

[options.packages.find]
where = src
