# Followed from simpy setup.cfg https://gitlab.com/team-simpy/simpy/-/blob/master/setup.cfg

[metadata]
name = simpm
author = Naimeh Sadeghi, Pedram Elmi
author_email = "sadeghi@kntu.ac.ir", "naima.sadeghi@gmail.com", "pedram.elmi@gmail.com"
description = SimPM (Simulation for Project Management) is a discrete-event simulation toolkit for modeling project schedules and resources (Python 3+).
long_description = file: README.md, AUTHORS.md
long_description_content_type = text/markdown
url = https://github.com/Project-SimPM/SimPM
project_urls =
    Documentation = https://simpm.readthedocs.io/en/latest/
    Source = https://github.com/Project-SimPM/SimPM
    Issues = https://github.com/Project-SimPM/SimPM/issues
    Releases = https://github.com/Project-SimPM/SimPM/releases
    Changelog = https://simpm.readthedocs.io/en/latest/changelog.html
keywords =
    python
    simpm
    simulation for project management
    project management
    project scheduling
    resource management
    critical path
    construction
    simulation
    scheduling
    discrete-event simulation
    documentation
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Office/Business :: Scheduling

[options]
include_package_data = True
zip_safe = False
setup_requires =
install_requires =
    simpy >= 4
    pandas >= 1
    numpy >= 1
    scipy >= 1
    matplotlib >= 3
    colorlog >= 6

python_requires = >= 3.6

package_dir =
    = src
packages = find:

[options.packages.find]
where = src
